--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: node_js
-node_js:
-  - "node"
+# language: node_js
+# node_js:
+#   - "node"
 # addons:
 #   sauce_connect: true
 #   hosts:
